fix overflow and book height issues

--- a/src/ImageBook/ImageBook.scss
+++ b/src/ImageBook/ImageBook.scss
@@ -1,11 +1,3 @@
-html {
-  overflow: hidden;
-}
-
-body {
-  background-color: floralwhite;
-}
-
 .App {
   text-align: center;
 }
@@ -22,15 +14,12 @@ body {
   padding: 1%;
 }
 
-.flip-book {
+.image-book {
   // box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
   margin: 0 auto;
   display: none;
   z-index: 100;
-}
-
-.html-book {
-  background-size: cover;
+  // overflow: hidden;
 }
 
 .pageturner-container {
